# new_model_rf

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_STEP_BY_STEP.md  DEPLOY_HUGGINGFACE.md  DEPLOY_MUDAH.md  DEPLOY_READY.md  Dockerfile  HISTORY_TABLE_FEATURE.md  IOT_MONITORING_MODE.md  IOT_SETUP_GUIDE.md  LOGGING_GUIDE.md  MODAL_UI_DOCUMENTATION.md  README.md  README_HF.md  TEST_FRONTEND.md  app.py  backend_fastapi.py  deploy.ps1  deploy.sh  esp32_water_quality.ino  frontend_water_quality_dashboard_react.tsx  index.html  inference_rf.py  main.tsx  model_features_order.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  rf_total_coliform_log1p_improved.joblib  test_cloud_api.ps1  tsconfig.json  vite-env.d.ts
md file/: CHECKLIST.md
